--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ language: java
 jdk:
   - oraclejdk8
   - openjdk7
-  
-sudo: false
+
+before_install:
+- cd java
 
 script:
   - ./mvnw clean install
