--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,2 @@
 language: java
-
-jdk:
-  - oraclejdk8
-  - openjdk7
-
-before_install:
-- cd java
-
-script:
-  - ./mvnw clean install
+script: ant main
