--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: java
+
 install: ant deps
+
 jdk:
   - oraclejdk8
+  - oraclejdk7
+  - openjdk6
   
 sudo: false
 addons:
   apt:
     packages:
       - oracle-java8-installer
+      
 script: ant main
-
