--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,7 @@
 language: java
 
-install: ant deps
-
 jdk:
-  - oraclejdk8
-  - oraclejdk7
-  - openjdk6
-  
-sudo: false
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
-      
-script: ant main
+    - oraclejdk8
+
+script:
+    - mvn cobertura:cobertura
