--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ jdk:
 
 script:
     - mvn cobertura:cobertura
+    
+after_success:
+  - bash <(curl -s https://codecov.io/bash) -t 5ff19955-6195-478d-92a1-d55a3627bc81
