--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: java
 
-jdk:
-    - oraclejdk8
+sudo: false 
 
-script:
-    - mvn cobertura:cobertura
+script: "mvn cobertura:cobertura"
     
 after_success:
   - bash <(curl -s https://codecov.io/bash) -t 5ff19955-6195-478d-92a1-d55a3627bc81
